# orban-labs-challenge

./: .gitignore  README.md
project-a-manual/backend/: README.md  pyproject.toml  run.py
project-a-manual/backend/src/application/commands/auth/: login_command.py  login_command_handler.py  register_user_command.py  register_user_command_handler.py
project-a-manual/backend/src/application/commands/notes/: create_note_command.py  create_note_command_handler.py  delete_note_command.py  delete_note_command_handler.py  update_note_command.py  update_note_command_handler.py
project-a-manual/backend/src/application/providers/: container.py
project-a-manual/backend/src/application/queries/notes/: get_note_by_id_query.py  list_notes_query.py  (+4 more)
project-a-manual/backend/src/domain/auth/: entities.py  repository.py  services.py
project-a-manual/backend/src/domain/notes/: entities.py  repository.py
project-a-manual/backend/src/infrastructure/: config.py
project-a-manual/backend/src/infrastructure/auth/: jwt_service.py  password_hasher.py
project-a-manual/backend/src/infrastructure/bus/: command_bus.py  query_bus.py
project-a-manual/backend/src/infrastructure/db/: models.py  session.py
project-a-manual/backend/src/infrastructure/repositories/: note_repository.py  user_repository.py
project-a-manual/backend/src/interface/api/: dependencies.py  main.py  response_mapper.py
project-a-manual/backend/src/shared/commands/: __init__.py
project-a-manual/backend/src/shared/queries/: __init__.py
project-a-manual/backend/src/shared/use_cases/: error.py  result.py
(+153 files in other folders)
