[tool.poetry]
name = "orban-labs"
version = "0.1.0"
description = ""
authors = [ "ruelblapid@gmail.com"]
package-mode = true
readme = "README.md"

[[tool.poetry.packages]]
include = "src"

[tool.poetry.dependencies]
python = "^3.13"
pyee = "^12.1.1"
pydantic = {extras = ["email"], version = "^2.10.6"}
dependency-injector = "^4.45.0"
python-decouple = "^3.8"
fastapi = "^0.139.0"
python-multipart = ">=0.0.31,<0.0.33"
starlette = "^1.3.1"
pyjwt = "^2.10.1"
python-dateutil = "^2.9.0.post0"
pytest = "^9.0.3"
pytest-bdd = "^8.1.0"
python-dotenv = "^1.1.0"
pytest-profiling = "^1.8.1"
python-jose = "^3.5.0"
pwdlib = {extras = ["argon2"], version = "^0.2.1"}
pydantic-settings = "^2.12.0"
sqlalchemy = "^2.0.36"
uvicorn = "^0.34.0"

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.3"
mypy = "^2.2.0"
isort = "^6.1.0"
black = "^26.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true

[tool.isort]
profile = "black"
combine_as_imports = true

[tool.black]
target-version = ["py310"]

[tool.pylint."MESSAGES CONTROL"]
disable = """
    missing-module-docstring,
    missing-class-docstring,
    missing-function-docstring,
    too-many-instance-attributes,
    too-many-arguments,
    too-few-public-methods,
    duplicate-code,
"""

[tool.pylint.BASIC]
good-names = """
    on
"""